Bug #388353 --> displaying a mail message leaks a jsContext.

mailnews urls should use weak references for the msg window and the status feedback object

sr=bienvenu